# protocol_statemachine-cpp

./: CMakeLists.txt  README.md  conanfile.txt
conan_package/: base.py  conanfile.py  dev_include_source.py  release_fetches_source.py  release_fetches_source_https.py  release_fetches_source_ssh.py  release_include_source.py
conan_package/test_package/: conanfile.py  example.cpp
include/protocol_statemachine/event/: Recv.hpp  UpdateTerms.hpp
sources/: CMakeLists.txt
sources/include/protocol_statemachine/: Buying.hpp  CBStateMachine.hpp  ReadyForInvitation.hpp  ReadyToInviteSeller.hpp  ReadyToSendTestPayload.hpp  RequestingPieces.hpp  SellerHasJoined.hpp  Selling.hpp  ServicingPieceRequests.hpp  StartedSelling.hpp  TestingSellerSpeed.hpp  protocol_statemachine.hpp
sources/include/protocol_statemachine/event/: Recv.hpp  SendTestPayload.hpp  TestSellerSpeed.hpp  UpdateTerms.hpp  event.hpp
sources/include/protocol_statemachine/exception/: CannotSpeedTestNonSeller.hpp  SpeedTestRequestedByNonBuyer.hpp
sources/src/: Buying.cpp  CBStateMachine.cpp  PreparingContract.cpp  ReadyForInvitation.cpp  ReadyToInviteSeller.cpp  ReadyToSendTestPayload.cpp  RequestingPieces.cpp  SellerHasJoined.cpp  Selling.cpp  ServicingPieceRequests.cpp  StartedSelling.cpp  TestingSellerSpeed.cpp  WaitingToStart.cpp
sources/src/event/: SendTestPayload.cpp  TestSellerSpeed.cpp
sources/src/exception/: CannotSpeedTestNonSeller.cpp  SpeedTestRequestedByNonBuyer.cpp
sources/test/: BuyingNavigator.cpp  BuyingNavigator.hpp  CBStateMachineCallbackSpy.cpp  CBStateMachineCallbackSpy.hpp  SellingNavigator.cpp  SellingNavigator.hpp  test_main.cpp
